Update 'j79bsdqxv-python' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b801971b63.y8bz.p3.openshiftapps.com/rhtap/rhtap-qe:9f27e68f7c5bb400735ce0765af5e2f23fe62cff@sha256:bdbca2d2ca821c9cc2fd669ca97947e103c3ea513837f4969002caf909c6a820

--- a/components/j79bsdqxv-python/overlays/development/deployment-patch.yaml
+++ b/components/j79bsdqxv-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: j79bsdqxv-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-b801971b63.y8bz.p3.openshiftapps.com/rhtap/rhtap-qe:9f27e68f7c5bb400735ce0765af5e2f23fe62cff@sha256:bdbca2d2ca821c9cc2fd669ca97947e103c3ea513837f4969002caf909c6a820
+          name: container-image
